[metadata]
name = rss_reader
version = attr: rss_reader.0.0.1
description = Python RSS-reader
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = file: requirements.txt
python_requires = >=3.9.0, <3.10

[options.packages.find]
exclude =
    rss_reader.tests*