[metadata]
name = rss_reader
description = Python RSS-reader
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9.0, <3.10

[options.packages.find]
exclude =
    .tests*
