[metadata]
name = rss_reader
description = Python RSS-reader
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9.0, <3.10
install_requires =
    importlib-metadata; python_version<"3.10"
    Brotli>=1.0.9
    Jinja2>=3.1.2
    MarkupSafe>=2.1.1
    Pillow>=9.2.0
    argcomplete>=2.0.0
    attrs>=22.1.0
    beautifulsoup4>=4.11.1
    bs4>=0.0.1
    certifi>=2022.6.15
    cffi>=1.15.1
    charset-normalizer>=2.1.1
    click>=8.1.3
    colorama>=0.4.5
    coverage>=6.4.4
    cssselect2>=0.6.0
    feedparser>=6.0.10
    fonttools>=4.37.1
    getbook>=0.3
    html5lib>=1.1
    idna>=3.3
    iniconfig>=1.1.1
    lxml>=4.9.1
    packaging>=21.3
    pipx>=1.1.0
    pluggy>=1.0.0
    py>=1.11.0
    pycparser>=2.21
    pydyf>=0.2.0
    pyparsing>=3.0.9
    pyphen>=0.13.0
    pytest>=7.1.3
    pytest-cov>=3.0.0
    python-dateutil>=2.8.2
    requests>=2.28.1
    setuptools>=60.2.0
    sgmllib3k>=1.0.0
    six>=1.16.0
    soupsieve>=2.3.2.post1
    tinycss2>=1.1.1
    tomli>=2.0.1
    urllib3>=1.26.12
    userpath>=1.8.0
    weasyprint>=56.1
    webencodings>=0.5.1

[options.entry_points]
console_scripts =
    rss_reader = src.main_reader.rss_reader:main

[options.packages.find]
exclude =
    tests*
    test*
